[tool.poetry]
name = "agents"
version = "0.1.0"
description = "Reinforcement Learning designed by and for RoboCIn"
authors = ["goncamateus <mgm4@cin.ufpe.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gymnasium = "^1.0.0"
ale-py = ">=0.9"
pygame = ">=2.1.3"
mujoco-py = ">=2.1,<2.2"
cython = "<3"
mujoco = ">=2.1.5"
imageio = ">=2.14.1"
jax = ">=0.4.16,"
jaxlib = ">=0.4.16,"
flax = ">=0.5.0"
torch = [
    {url = "https://download.pytorch.org/whl/cu121/torch-2.2.2%2Bcu121-cp310-cp310-win_amd64.whl", platform = "win32"},
    {url = "https://download.pytorch.org/whl/cu121/torch-2.2.2%2Bcu121-cp310-cp310-linux_x86_64.whl", platform = "linux"}
]
numpy = "1.26.4"

[tool.poetry.group.dev.dependencies]
ipython = "^8.32.0"
pytest = "^8.3.4"
coverage = "^7.6.12"
pytest-cov = "^6.0.0"
taskipy = "^1.14.1"
genbadge = {extras = ["all"], version = "^1.1.1"}
pre-commit = "^4.1.0"
coverage-badge = "^1.1.2"
isort = "^6.0.0"
tyro = "^0.9.16"

[tool.coverage.run]
branch = true
source = ["agents"]

[tool.coverage.report]
show_missing = true
fail_under = 80
omit = [
    "tests/",
    "*/__init__.py",
    "agents/common/agent.py",
    "agents/common/policy_gradient/sac.py",
    "examples/",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.taskipy.tasks]
test = "pytest --cov"
test-badge = "coverage-badge -fo reports/tests-badge.svg"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
