[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "agents"
version = "0.1.0"
description = "Reinforcement Learning designed by and for RoboCIn"
authors = [
    { name = "goncamateus", email = "mgm4@cin.ufpe.br" }
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "gymnasium==1.0.0",
    "pygame>=2.1.3",
    "imageio>=2.14.1",
    "jax>=0.4.16",
    "jaxlib>=0.4.16",
    "flax>=0.5.0",
    'torch @ https://download.pytorch.org/whl/cu121/torch-2.2.2%2Bcu121-cp310-cp310-win_amd64.whl ; platform_system == "Windows"',
    'torch @ https://download.pytorch.org/whl/cu121/torch-2.2.2%2Bcu121-cp310-cp310-linux_x86_64.whl ; platform_system == "Linux"',
    "numpy==1.26.4",
]

[project.urls]
"Homepage" = "https://github.com/goncamateus"
"Repository" = "https://github.com/goncamateus/agents"

[project.optional-dependencies]
dev = [
    "ipython>=8.32.0",
    "pytest>=8.3.4",
    "coverage>=7.6.12",
    "pytest-cov>=6.0.0",
    "taskipy>=1.14.1",
    "genbadge[all]>=1.1.1",
    "pre-commit>=4.1.0",
    "coverage-badge>=1.1.2",
    "isort>=6.0.0"
]
examples = [
    "tyro>=0.9.16",
    "mujoco-py>=2.1,<2.2",
    "cython<3",
    "mujoco>=2.1.5",
    "ale-py>=0.9",
    "tensorboard>=2.19.0",
    "gymnasium[other]>=1.0.0"
]

[coverage.run]
branch = true
source = ["agents"]

[coverage.report]
show_missing = true
fail_under = 80
omit = [
    "tests/",
    "*/__init__.py",
    "agents/common/agent.py",
    "agents/common/policy_gradient/sac.py",
    "examples/",
]

[coverage.html]
directory = "htmlcov"

[tool.taskipy.tasks]
test = "pytest --cov"
test-badge = "coverage-badge -fo reports/tests-badge.svg"
